# pjos

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build  meson_options.txt
headers/pjos/: Allocator.h  Assignment.h  Base.h  BaseSolver.h  CdclSolver.h  Clause.h  Core.h  DecisionTrail.h  Dimacs.h  DpllSolver.h  Error.h  Format.h  Formula.h  Heuristics.h  Literal.h  Solver.h  Watcher.h
headers/sat_solver/: Assignment.h  Base.h  BaseSolver.h  Clause.h  ClauseContainer.h  Core.h  DecisionTrail.h  Dimacs.h  Error.h  Format.h  Formula.h  Heuristics.h  Literal.h  Solver.h  Watcher.h
source/: Assignment.cpp  BaseSolver.cpp  CdclSolver.cpp  Clause.cpp  ClauseContainer.cpp  DecisionTrail.cpp  Dimacs.cpp  DpllSolver.cpp  Error.cpp  Format.cpp  Formula.cpp  Heuristics.cpp  Literal.cpp  Watcher.cpp  ipasir.cpp  main.cpp
tests/: all.sh  generate_test.py  main.py  random_test.py  requirements.txt  sample_test.py  sat_solver.py  solver_test.py
tests/random/: main.py
tests/samples/: 1.cnf  10.cnf  11.cnf  12.cnf  13.cnf  2.cnf  3.cnf  4.cnf  5.cnf  6.cnf  7.cnf  8.cnf
